--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
-<body>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scales=1.0" />
+    <title>Первый проект</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <title> Первый проект</title>
+  </body>
+</html>
